test/lambda/negative/semantic/undefined_variable.ls
// @expect-error: E201
// @description: Undefined variable reference

let y = x + 1
